--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <h1 class="title">Саша или просто Саня если вы её друг<br> <br>
                     Дополнительно посмотреть на Сашку можно тут:<br> <br>
                     <a class="social" href="https://vk.com/sasha_pesh" target="_blank"><img class="social"
-                            src="/img/free-icon-vk-145813.png" alt=""></a>
+                            src="img/free-icon-vk-145813.png" alt=""></a>
                     <a class="social" href="https://instagram.com/sasha_pesh?utm_medium=copy_link" target="_blank"><img
-                            class="social" src="/img/premium-icon-instagram-3955024.png" alt=""></a>
+                            class="social" src="img/premium-icon-instagram-3955024.png" alt=""></a>
             </div>
             <img class="img-banner" src="img/Q6OuaQJF-Uo.jpg" width="400px">
         </div>
